# nix-installer

./: CONTRIBUTING.md  Cargo.toml  README.md  _typos.toml  assemble_installer.py  build.rs  flake.nix  nix-installer.sh  treefmt.nix  upload_s3.sh
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: act-test.yml  bump-nix-version.yml  ci.yml  release-script.yml  update.yml
docs/: building.md  releasing.md  rust-library.md
nix/tests/container-test/: default.nix
nix/tests/container-test/default/: Dockerfile
nix/tests/vm-test/: default.nix
scripts/: assemble_installer.py  bump_nix_version.py
src/: error.rs  lib.rs  plan.rs  self_test.rs  settings.rs  util.rs
src/action/: mod.rs  stateful.rs
src/action/base/: add_user_to_group.rs  create_directory.rs  create_file.rs  create_group.rs  create_or_insert_into_file.rs  create_or_merge_nix_config.rs  create_user.rs  delete_user.rs  fetch_and_unpack_nix.rs  mod.rs  move_unpacked_nix.rs  remove_directory.rs  setup_default_profile.rs
src/action/common/: configure_init_service.rs  configure_nix.rs  configure_shell_profile.rs  configure_upstream_init_service.rs  create_nix_tree.rs  create_users_and_groups.rs  delete_users.rs  place_nix_configuration.rs  provision_nix.rs  setup_channels.rs
src/action/linux/: ensure_steamos_nix_directory.rs  provision_selinux.rs  revert_clean_steamos_nix_offload.rs  start_systemd_unit.rs  systemctl_daemon_reload.rs
src/action/macos/: bootstrap_launchctl_service.rs  configure_remote_building.rs  create_apfs_volume.rs  create_fstab_entry.rs  create_nix_hook_service.rs  create_nix_volume.rs  create_synthetic_objects.rs  create_volume_service.rs  enable_ownership.rs  encrypt_apfs_volume.rs  kickstart_launchctl_service.rs  mod.rs  set_tmutil_exclusion.rs  set_tmutil_exclusions.rs  unmount_apfs_volume.rs
src/cli/: interaction.rs  mod.rs
src/cli/arg/: instrumentation.rs
src/cli/subcommand/: plan.rs  repair.rs  self_test.rs  split_receipt.rs  uninstall.rs
src/cli/subcommand/install/: mod.rs
src/os/darwin/: diskutil.rs
src/planner/: linux.rs  mod.rs  ostree.rs  steam_deck.rs
src/planner/macos/: mod.rs  profiles.rs
src/profile/: mod.rs
src/profile/nixenv/: mod.rs  tests.rs
src/profile/nixprofile/: mod.rs  tests.rs
tests/fixtures/linux/: linux.json  steam-deck.json
tests/fixtures/macos/: macos.json
